# vstucar

./: .gitignore  LICENSE  README.md
car_core/: CMakeLists.txt  package.xml  setup.py
car_core/scripts/: behaviour_planner_node  motion_planner_node  motion_planner_test.py  path_drawer_node.py  path_pub_node.py  target_decompositor_node
car_core/scripts/car_core/behaviour_planner/: behaviour_planner.py
car_core/scripts/car_core/common/: __init__.py  geom_helpers.py  msgs_helpers.py  rviz_helpers.py
car_core/scripts/car_core/map/: map.py
car_core/scripts/car_core/motion_planner/: __init__.py  frenet.py  motion_planner.py  quintic.py  trajectory.py
car_core/src/motion_planner/: dynarray.h  frenet.h  motion_planner.cpp  motion_planner.h  motion_planner_base.cpp  motion_planner_base.h  quintic.h  range.h  trajectory.h
car_core/tests/: test_py_common.py
car_msgs/: CMakeLists.txt  package.xml
car_msgs/msg/: CarState.msg  MotionPlanningTarget.msg
research/: motion_planner_test.ipynb  motion_planner_test_2.ipynb  path_planning_help_symbol.ipynb
