<?xml version="1.0"?>
<package format="2">
  <name>car_msgs</name>
  <version>0.0.0</version>
  <description>VSTU autonomous car project common messages package</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>MIT</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
